Replaced ahana.yoga to diksha_fitness_studio

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,2 +1,3 @@
 change content on home.html
-chane img aspect-ration option in gallary section in footer.html
+chane img aspect-ration option in gallary section in footer.html  
+    CSS : {style="aspect-ratio: 3/2;  mix-blend-mode: color-burn; object-fit: contain;"}
